--- a/styles/main.css
+++ b/styles/main.css
@@ -14,11 +14,6 @@ Tags:
 
 
 /* ------------------------------------------ */
-/*             00 - FONTS
-/* ------------------------------------------ */
-
-
-/* ------------------------------------------ */
 /*             01 - GENERAL STYLES
 /* ------------------------------------------ */
 html, body {
@@ -34,23 +29,28 @@ html, body {
   background-color: #20232d;
   text-align: center;
   color: #ffffff;
-  
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
+.eyes{
+    outline: 1px solid red;
+}
+.eyes canvas{
+    max-width: 100%;
+}
 .error{   
     box-sizing: border-box;
     padding: 15px;
+    outline: 1px solid green;
 }
 .error__heading{
-    font-size: 50px;
+    font-size: 26px;
   line-height: 1.3;
+  margin: 0;
+
 }
 .error__heading span{
     display: block;
-    font-size: 70px;
+    font-size: 60px;
 }
 .error__description{
     display: block;
@@ -73,10 +73,13 @@ color: #FFF;
 border-radius: 3px;
 text-align: center;
 text-decoration: none;
-background-color: rgba(242, 89, 75, 1);
+background-color: rgba(141, 73, 107, 1);
 }
 .error__button:hover {
-background-color: rgba(242, 89, 75, 0.4);
+background-color: rgba(141, 73, 107, 0.6);
+}
+.error__button:active {
+background-color: rgba(141, 73, 107, 0.4);
 }
 .error__socials{
     margin-top: 20px;
@@ -97,6 +100,21 @@ background-color: rgba(242, 89, 75, 0.4);
 }
 
 @media (min-width: 960px) {
+    body{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .eyes,
+    .error{
+        width: 50%;
+    }
+    .error__heading{
+        font-size: 40px;
+    }
+    .error__heading span{
+        font-size: 70px;
+    }
     .error__buttons {
         display: flex;
         align-items: center;
@@ -203,10 +221,11 @@ background-color: rgba(242, 89, 75, 0.4);
   transition-delay: 0.1s;
 }
 .modal__content h2 {
+font-size: 30px;
   font-weight: 700;
   padding-bottom: 22px;
   display: block;
-  color: #F2594B;
+  color: rgba(141, 73, 107, 1);;
   text-align: center;
   text-transform: uppercase;
 }
@@ -228,6 +247,7 @@ background-color: rgba(242, 89, 75, 0.4);
 .modal__form textarea{
     box-sizing: border-box;
     width: 100%;
+    max-width: 100%;
     height: 150px;
     padding: 15px;
     margin-bottom: 15px;
@@ -239,7 +259,7 @@ background-color: rgba(242, 89, 75, 0.4);
 .modal__form input:hover,
 .modal__form textarea:hover{
     outline: none;
-    border: 2px solid #F2594B;
+    border: 2px solid rgba(141, 73, 107, 1);;
 }
 .modal__form button {
     box-sizing: border-box;
@@ -251,7 +271,7 @@ background-color: rgba(242, 89, 75, 0.4);
     font-size: 14px;
 }
 .modal__form button:hover {
-    border: 2px solid #F2594B;
+    border: 2px solid rgba(141, 73, 107, 1);;
 }
 .modal__form button:active {
     color: black;
