--- a/styles/main.css
+++ b/styles/main.css
@@ -8,104 +8,101 @@ Tags:
 /* ------------------------------------------ */
 /*             TABLE OF CONTENTS
 /* ------------------------------------------ */
-/*  00 - FONTS  */
 /*  01 - GENERAL STYLES  */
-/*  0X - MODAL BOX  */
-
+/*  02 - MODAL BOX  */
+/*  03 - ANIMATIONS  */
 
 /* ------------------------------------------ */
 /*             01 - GENERAL STYLES
 /* ------------------------------------------ */
-html, body {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  margin: 0;
-  padding: 0;
-  font-family: 'Noto Sans', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  background-color: #18191e;
-  text-align: center;
-  color: #ffffff;
+html,
+body {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    font-family: 'Lucida Console', Monaco, monospace;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    background-color: #18191e;
+    text-align: center;
+    color: #ffffff;
 }
-
 .eyes,
-.eyes canvas{
+.eyes canvas {
     max-width: 100%;
 }
-.error{   
+.error {
     box-sizing: border-box;
     padding: 15px;
 }
-.error__heading{
+.error__heading {
     font-size: 26px;
-  line-height: 1.3;
-  margin: 0;
-
+    line-height: 1.3;
+    margin: 0;
 }
-.error__heading span{
+.error__heading span {
     display: block;
     font-size: 60px;
 }
-.error__description{
+.error__description {
     display: block;
-  line-height: 1.7;
-  margin-bottom: 15px;
+    line-height: 1.7;
+    margin-bottom: 15px;
 }
 .error__button {
-box-sizing: border-box;
-cursor: pointer;
-outline: none;
-border: none;
-display: block;
-width: 100%;
-line-height: 55px;
-font-size: 14px;
-text-transform: uppercase;
-margin: 15px auto;
-padding: 0 10px;
-color: #FFF;
-border-radius: 3px;
-text-align: center;
-text-decoration: none;
-background-color: rgba(141, 73, 107, 1);
+    box-sizing: border-box;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    display: block;
+    width: 100%;
+    line-height: 55px;
+    font-size: 18px;
+    text-transform: uppercase;
+    margin: 15px auto;
+    padding: 0 10px;
+    color: #FFF;
+    border-radius: 3px;
+    text-align: center;
+    text-decoration: none;
+    background-color: rgba(141, 73, 107, 1);
 }
 .error__button:hover {
-background-color: rgba(141, 73, 107, 0.6);
+    background-color: rgba(141, 73, 107, 0.6);
 }
 .error__button:active {
-background-color: rgba(141, 73, 107, 0.4);
+    background-color: rgba(141, 73, 107, 0.4);
 }
-.error__socials{
+.error__socials {
     margin-top: 20px;
 }
-.error__social{
+.error__social {
     margin: 0 10px;
     color: #ffffff;
     text-decoration: none;
     font-size: 24px;
-  opacity: 1;
+    opacity: 1;
 }
-.error__social:hover{
-  color: rgba(141, 73, 107, 1);
+.error__social:hover {
+    color: rgba(141, 73, 107, 1);
 }
-
 @media (min-width: 960px) {
-    body{
+    body {
         display: flex;
         align-items: center;
         justify-content: center;
     }
     .eyes,
-    .error{
+    .error {
         width: 50%;
     }
-    .error__heading{
+    .error__heading {
         font-size: 40px;
     }
-    .error__heading span{
+    .error__heading span {
         font-size: 70px;
     }
     .error__buttons {
@@ -113,123 +110,117 @@ background-color: rgba(141, 73, 107, 0.4);
         align-items: center;
         justify-content: center;
     }
-    .error__button {
-
-    }
-    .error__button:first-child {
+    .error__button {} .error__button:first-child {
         margin-right: 15px;
     }
 }
-
 @media (min-width: 1600px) {
-    body{
+    body {
         box-sizing: border-box;
         padding: 0 20%;
     }
 }
 
-
-
 /* ------------------------------------------ */
-/*             0X - MODAL BOX
+/*             02 - MODAL BOX
 /* ------------------------------------------ */
 .modal {
     box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  z-index: 50;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -moz-box-align: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -moz-box-pack: center;
-  -ms-flex-pack: center;
-  width: 100%;
-  text-align: center;
-  visibility: hidden;
-  
-  color: #20232d;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    z-index: 50;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    -moz-box-align: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -moz-box-pack: center;
+    -ms-flex-pack: center;
+    width: 100%;
+    text-align: center;
+    visibility: hidden;
+    color: #20232d;
 }
 .modal__box {
-  display: block;
-  vertical-align: middle;
-  text-align: center;
+    display: block;
+    vertical-align: middle;
+    text-align: center;
 }
 .modal__inset {
     box-sizing: border-box;
-  position: relative;
-  padding: 40px;
-  background-color: white;
-  min-width: 320px;
-  min-height: 126px;
-  margin: auto;
-  visibility: hidden;
-  -moz-box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.2);
-  box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.2);
-  -moz-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  -moz-transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
+    position: relative;
+    padding: 40px;
+    background-color: white;
+    min-width: 320px;
+    min-height: 126px;
+    margin: auto;
+    visibility: hidden;
+    -moz-box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.2);
+    -moz-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    -moz-transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
 }
 .modal__inset .modal__close {
-  display: block;
-  cursor: pointer;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  padding: 10px;
-  opacity: .4;
+    display: block;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    opacity: .4;
 }
 .modal__inset .modal__close:hover {
-  opacity: 1;
+    opacity: 1;
 }
-.modal__content{
-  margin: auto;
-  opacity: 0;
-  -moz-transform: translateY(0) scale(0.8, 0.8);
-  -ms-transform: translateY(0) scale(0.8, 0.8);
-  -webkit-transform: translateY(0) scale(0.8, 0.8);
-  transform: translateY(0) scale(0.8, 0.8);
-  -moz-transition-property: opacity, -moz-transform;
-  -o-transition-property: opacity, -o-transform;
-  -webkit-transition-property: opacity, -webkit-transform;
-  transition-property: opacity, transform;
-  -moz-transition-duration: 0.25s;
-  -o-transition-duration: 0.25s;
-  -webkit-transition-duration: 0.25s;
-  transition-duration: 0.25s;
-  -moz-transition-delay: 0.1s;
-  -o-transition-delay: 0.1s;
-  -webkit-transition-delay: 0.1s;
-  transition-delay: 0.1s;
+.modal__content {
+    margin: auto;
+    opacity: 0;
+    -moz-transform: translateY(0) scale(0.8, 0.8);
+    -ms-transform: translateY(0) scale(0.8, 0.8);
+    -webkit-transform: translateY(0) scale(0.8, 0.8);
+    transform: translateY(0) scale(0.8, 0.8);
+    -moz-transition-property: opacity, -moz-transform;
+    -o-transition-property: opacity, -o-transform;
+    -webkit-transition-property: opacity, -webkit-transform;
+    transition-property: opacity, transform;
+    -moz-transition-duration: 0.25s;
+    -o-transition-duration: 0.25s;
+    -webkit-transition-duration: 0.25s;
+    transition-duration: 0.25s;
+    -moz-transition-delay: 0.1s;
+    -o-transition-delay: 0.1s;
+    -webkit-transition-delay: 0.1s;
+    transition-delay: 0.1s;
 }
 .modal__content h2 {
-font-size: 30px;
-  font-weight: 700;
-  padding-bottom: 22px;
-  display: block;
-  color: rgba(141, 73, 107, 1);;
-  text-align: center;
-  text-transform: uppercase;
+    font-size: 30px;
+    font-weight: 700;
+    padding-bottom: 22px;
+    display: block;
+    color: rgba(141, 73, 107, 1);
+    ;
+    text-align: center;
+    text-transform: uppercase;
 }
 .modal__content small {
-  font-size: 12px;
-  opacity: .3;
+    font-size: 12px;
+    opacity: .3;
 }
 .modal__form {
     width: 100%;
@@ -239,25 +230,25 @@ font-size: 30px;
     width: 100%;
     padding: 15px;
     margin-bottom: 15px;
-    border: 2px solid #000;
+    border: 2px solid #18191e;
     font-size: 12px;
 }
-.modal__form textarea{
+.modal__form textarea {
     box-sizing: border-box;
     width: 100%;
     max-width: 100%;
     height: 150px;
     padding: 15px;
     margin-bottom: 15px;
-    border: 2px solid #000;
+    border: 2px solid #18191e;
     font-size: 12px;
 }
 .modal__form input:focus,
 .modal__form textarea:focus,
 .modal__form input:hover,
-.modal__form textarea:hover{
+.modal__form textarea:hover {
     outline: none;
-    border: 2px solid rgba(141, 73, 107, 1);;
+    border: 2px solid rgba(141, 73, 107, 1);
 }
 .modal__form button {
     box-sizing: border-box;
@@ -265,93 +256,92 @@ font-size: 30px;
     margin: 0 0 15px;
     padding: 15px;
     background: transparent;
-    border: 2px solid #000;
+    border: 2px solid #18191e;
     font-size: 14px;
 }
 .modal__form button:hover {
-    border: 2px solid rgba(141, 73, 107, 1);;
+    border: 2px solid rgba(141, 73, 107, 1);
 }
 .modal__form button:active {
-    color: black;
+    color: #18191e;
 }
 .modal-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  background-color: #fff;
-  opacity: 0;
-  visibility: hidden;
-  z-index: 40;
-  -moz-transition: opacity 0.25s ease 0s, visibility 0.35s linear;
-  -o-transition: opacity 0.25s ease 0s, visibility 0.35s linear;
-  -webkit-transition: opacity 0.25s ease, visibility 0.35s linear;
-  -webkit-transition-delay: 0s, 0s;
-  transition: opacity 0.25s ease 0s, visibility 0.35s linear;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background-color: #fff;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 40;
+    -moz-transition: opacity 0.25s ease 0s, visibility 0.35s linear;
+    -o-transition: opacity 0.25s ease 0s, visibility 0.35s linear;
+    -webkit-transition: opacity 0.25s ease, visibility 0.35s linear;
+    -webkit-transition-delay: 0s, 0s;
+    transition: opacity 0.25s ease 0s, visibility 0.35s linear;
 }
 .modal-overlay.modal--show {
-  /*opacity: .1;*/
-  visibility: visible;
-  -moz-transition-delay: 0s;
-  -o-transition-delay: 0s;
-  -webkit-transition-delay: 0s;
-  transition-delay: 0s;
-  -moz-transition-duration: 0.2s, 0s;
-  -o-transition-duration: 0.2s, 0s;
-  -webkit-transition-duration: 0.2s, 0s;
-  transition-duration: 0.2s, 0s;
+    /*opacity: .1;*/
+    visibility: visible;
+    -moz-transition-delay: 0s;
+    -o-transition-delay: 0s;
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+    -moz-transition-duration: 0.2s, 0s;
+    -o-transition-duration: 0.2s, 0s;
+    -webkit-transition-duration: 0.2s, 0s;
+    transition-duration: 0.2s, 0s;
 }
 .modal.modal--appear {
-  visibility: visible;
+    visibility: visible;
 }
 .modal.modal--appear .modal__inset {
-  -moz-animation: modalComeIn 0.25s ease;
-  -webkit-animation: modalComeIn 0.25s ease;
-  animation: modalComeIn 0.25s ease;
-  visibility: visible;
+    -moz-animation: modalComeIn 0.25s ease;
+    -webkit-animation: modalComeIn 0.25s ease;
+    animation: modalComeIn 0.25s ease;
+    visibility: visible;
 }
 .modal.modal--appear .modal__content {
-  opacity: 1;
-  -moz-transform: translateY(0) scale(1, 1);
-  -ms-transform: translateY(0) scale(1, 1);
-  -webkit-transform: translateY(0) scale(1, 1);
-  transform: translateY(0) scale(1, 1);
+    opacity: 1;
+    -moz-transform: translateY(0) scale(1, 1);
+    -ms-transform: translateY(0) scale(1, 1);
+    -webkit-transform: translateY(0) scale(1, 1);
+    transform: translateY(0) scale(1, 1);
 }
 .modal.modal--leave {
-  visibility: visible;
+    visibility: visible;
 }
 .modal.modal--leave .modal__inset {
-  -moz-animation: modalHeadOut 0.35s ease 0.1s;
-  -webkit-animation: modalHeadOut 0.35s ease 0.1s;
-  animation: modalHeadOut 0.35s ease 0.1s;
-  visibility: visible;
+    -moz-animation: modalHeadOut 0.35s ease 0.1s;
+    -webkit-animation: modalHeadOut 0.35s ease 0.1s;
+    animation: modalHeadOut 0.35s ease 0.1s;
+    visibility: visible;
 }
 .modal.modal--leave .modal__content {
-  opacity: 0;
-  -moz-transition-delay: 0s;
-  -o-transition-delay: 0s;
-  -webkit-transition-delay: 0s;
-  transition-delay: 0s;
-  -moz-transition-duration: 0.35s;
-  -o-transition-duration: 0.35s;
-  -webkit-transition-duration: 0.35s;
-  transition-duration: 0.35s;
-  -moz-transition-timing-function: ease;
-  -o-transition-timing-function: ease;
-  -webkit-transition-timing-function: ease;
-  transition-timing-function: ease;
-  -moz-transform: translateY(25px);
-  -ms-transform: translateY(25px);
-  -webkit-transform: translateY(25px);
-  transform: translateY(25px);
+    opacity: 0;
+    -moz-transition-delay: 0s;
+    -o-transition-delay: 0s;
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+    -moz-transition-duration: 0.35s;
+    -o-transition-duration: 0.35s;
+    -webkit-transition-duration: 0.35s;
+    transition-duration: 0.35s;
+    -moz-transition-timing-function: ease;
+    -o-transition-timing-function: ease;
+    -webkit-transition-timing-function: ease;
+    transition-timing-function: ease;
+    -moz-transform: translateY(25px);
+    -ms-transform: translateY(25px);
+    -webkit-transform: translateY(25px);
+    transform: translateY(25px);
 }
-
 @-moz-document url-prefix() {
-  .modal {
-    height: calc(100% - 55px);
-  }
+    .modal {
+        height: calc(100% - 55px);
+    }
 }
 @media (min-width: 960px) {
     .modal__inset {
@@ -360,90 +350,89 @@ font-size: 30px;
 }
 
 /* ------------------------------------------ */
-/*             0X - ANIMATIONS
+/*             03 - ANIMATIONS
 /* ------------------------------------------ */
 @-webkit-keyframes modalComeIn {
-  0% {
-    visibility: hidden;
-    opacity: 0;
-    -moz-transform: scale(0.8, 0.8);
-    -ms-transform: scale(0.8, 0.8);
-    -webkit-transform: scale(0.8, 0.8);
-    transform: scale(0.8, 0.8);
-  }
-  65.5% {
-    -moz-transform: scale(1.03, 1.03);
-    -ms-transform: scale(1.03, 1.03);
-    -webkit-transform: scale(1.03, 1.03);
-    transform: scale(1.03, 1.03);
-  }
-  100% {
-    visibility: visible;
-    opacity: 1;
-    -moz-transform: scale(1, 1);
-    -ms-transform: scale(1, 1);
-    -webkit-transform: scale(1, 1);
-    transform: scale(1, 1);
-  }
+    0% {
+        visibility: hidden;
+        opacity: 0;
+        -moz-transform: scale(0.8, 0.8);
+        -ms-transform: scale(0.8, 0.8);
+        -webkit-transform: scale(0.8, 0.8);
+        transform: scale(0.8, 0.8);
+    }
+    65.5% {
+        -moz-transform: scale(1.03, 1.03);
+        -ms-transform: scale(1.03, 1.03);
+        -webkit-transform: scale(1.03, 1.03);
+        transform: scale(1.03, 1.03);
+    }
+    100% {
+        visibility: visible;
+        opacity: 1;
+        -moz-transform: scale(1, 1);
+        -ms-transform: scale(1, 1);
+        -webkit-transform: scale(1, 1);
+        transform: scale(1, 1);
+    }
 }
 @keyframes modalComeIn {
-  0% {
-    visibility: hidden;
-    opacity: 0;
-    -moz-transform: scale(0.8, 0.8);
-    -ms-transform: scale(0.8, 0.8);
-    -webkit-transform: scale(0.8, 0.8);
-    transform: scale(0.8, 0.8);
-  }
-  65.5% {
-    -moz-transform: scale(1.03, 1.03);
-    -ms-transform: scale(1.03, 1.03);
-    -webkit-transform: scale(1.03, 1.03);
-    transform: scale(1.03, 1.03);
-  }
-  100% {
-    visibility: visible;
-    opacity: 1;
-    -moz-transform: scale(1, 1);
-    -ms-transform: scale(1, 1);
-    -webkit-transform: scale(1, 1);
-    transform: scale(1, 1);
-  }
+    0% {
+        visibility: hidden;
+        opacity: 0;
+        -moz-transform: scale(0.8, 0.8);
+        -ms-transform: scale(0.8, 0.8);
+        -webkit-transform: scale(0.8, 0.8);
+        transform: scale(0.8, 0.8);
+    }
+    65.5% {
+        -moz-transform: scale(1.03, 1.03);
+        -ms-transform: scale(1.03, 1.03);
+        -webkit-transform: scale(1.03, 1.03);
+        transform: scale(1.03, 1.03);
+    }
+    100% {
+        visibility: visible;
+        opacity: 1;
+        -moz-transform: scale(1, 1);
+        -ms-transform: scale(1, 1);
+        -webkit-transform: scale(1, 1);
+        transform: scale(1, 1);
+    }
 }
 @-webkit-keyframes modalHeadOut {
-  0% {
-    visibility: visible;
-    opacity: 1;
-    -moz-transform: translateY(0) scale(1, 1);
-    -ms-transform: translateY(0) scale(1, 1);
-    -webkit-transform: translateY(0) scale(1, 1);
-    transform: translateY(0) scale(1, 1);
-  }
-  100% {
-    visibility: hidden;
-    opacity: 0;
-    -moz-transform: translateY(35px) scale(0.97, 0.97);
-    -ms-transform: translateY(35px) scale(0.97, 0.97);
-    -webkit-transform: translateY(35px) scale(0.97, 0.97);
-    transform: translateY(35px) scale(0.97, 0.97);
-  }
+    0% {
+        visibility: visible;
+        opacity: 1;
+        -moz-transform: translateY(0) scale(1, 1);
+        -ms-transform: translateY(0) scale(1, 1);
+        -webkit-transform: translateY(0) scale(1, 1);
+        transform: translateY(0) scale(1, 1);
+    }
+    100% {
+        visibility: hidden;
+        opacity: 0;
+        -moz-transform: translateY(35px) scale(0.97, 0.97);
+        -ms-transform: translateY(35px) scale(0.97, 0.97);
+        -webkit-transform: translateY(35px) scale(0.97, 0.97);
+        transform: translateY(35px) scale(0.97, 0.97);
+    }
 }
 @keyframes modalHeadOut {
-  0% {
-    visibility: visible;
-    opacity: 1;
-    -moz-transform: translateY(0) scale(1, 1);
-    -ms-transform: translateY(0) scale(1, 1);
-    -webkit-transform: translateY(0) scale(1, 1);
-    transform: translateY(0) scale(1, 1);
-  }
-  100% {
-    visibility: hidden;
-    opacity: 0;
-    -moz-transform: translateY(35px) scale(0.97, 0.97);
-    -ms-transform: translateY(35px) scale(0.97, 0.97);
-    -webkit-transform: translateY(35px) scale(0.97, 0.97);
-    transform: translateY(35px) scale(0.97, 0.97);
-  }
+    0% {
+        visibility: visible;
+        opacity: 1;
+        -moz-transform: translateY(0) scale(1, 1);
+        -ms-transform: translateY(0) scale(1, 1);
+        -webkit-transform: translateY(0) scale(1, 1);
+        transform: translateY(0) scale(1, 1);
+    }
+    100% {
+        visibility: hidden;
+        opacity: 0;
+        -moz-transform: translateY(35px) scale(0.97, 0.97);
+        -ms-transform: translateY(35px) scale(0.97, 0.97);
+        -webkit-transform: translateY(35px) scale(0.97, 0.97);
+        transform: translateY(35px) scale(0.97, 0.97);
+    }
 }
-
