--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,8 @@
 /*
-Template Name: Responsive Animated 404 Pages
+Template Name: Responsive Animated 404 Page
 Author: Rogatnev Nikita
 Version: 1.0.0
-Tags: 
+Tags: error, error page, 404, creative, clean, modern, minimal, animated, responsive, dark, oh no, oops
 */
 
 /* ------------------------------------------ */
