--- a/html/styles/main.css
+++ b/html/styles/main.css
@@ -2,7 +2,7 @@
 Template Name: The eye - Responsive Animated 404 Page
 Author: Rogatnev Nikita
 Version: 1.0.0
-Tags: error, error page, 404, creative, clean, modern, minimal, animated, responsive, dark, oh no, oops
+Tags: error, error page, creative, clean, modern, minimal, animated, responsive, dark, oh no, oops
 */
 
 /* ------------------------------------------ */
