--- a/html/styles/main.css
+++ b/html/styles/main.css
@@ -231,6 +231,7 @@ body {
     padding: 15px;
     margin-bottom: 15px;
     border: 2px solid #18191e;
+    border-radius: 3px;
     font-size: 12px;
 }
 .modal__form textarea {
@@ -238,9 +239,11 @@ body {
     width: 100%;
     max-width: 100%;
     height: 150px;
+    max-height: 70vh;
     padding: 15px;
     margin-bottom: 15px;
     border: 2px solid #18191e;
+    border-radius: 3px;
     font-size: 12px;
 }
 .modal__form input:focus,
@@ -257,6 +260,7 @@ body {
     padding: 15px;
     background: transparent;
     border: 2px solid #18191e;
+    border-radius: 3px;
     font-size: 14px;
 }
 .modal__form button:hover {
