--- a/html/styles/main.css
+++ b/html/styles/main.css
@@ -87,7 +87,10 @@ body {
     opacity: 1;
 }
 .error__social:hover {
-    color: rgba(141, 73, 107, 1);
+    color: rgba(141, 73, 107, 0.6);
+}
+.error__social:active {
+    color: rgba(141, 73, 107, 0.4);
 }
 @media (min-width: 960px) {
     body {
